실험방법 추가 및 버튼 아이콘 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="strAgitator">교반기</string>
     <string name="strElectronicScale">전자저울</string>
     <string name="strHeatingMantle">히팅멘틀</string>
+    <string name="strEx3">(1) PVA(M.W 13000~23000) 1.5g을 정량한다.\n\n(2) 용매 에탄올, 벤젠, 아세톤, 증류수를 각각 준비한다.\n\n(3) 100ml 메스플라스크에 PVA 와 각 용매를 표선까지 채운다.\n\n(4) 20분간 고분자 용액을 교반한다.\n\n(5) 교반을 완료한 고분자 용액을 감압플라스크로 여과한다.\n\n(6) 여과한 고분자를 건조시켜 무게를 측정한다.\n\n(7) 분자량이 더 높은 PVA(M.W. 31000~50000)를 위와 같은 실험 방법으로 반복한다.</string>
+    <string name="strEx2">(1) PVA(M.W 13000~23000)를 각각 0.3g, 0.6g, 0.9g 1.2g 1.5g 정량한다.\n\n(2) 증류수 100ml를 채운 매스플라스크 5개를 준비한다.\n\n(3) 각 플라스크에 정량한 PVA를 조금씩 서서히 투입하며 녹인다.\n\n(4) magnetic bar와 stirrer을 이용하여 약 30분간 교반시킨다.\n\n(5) Ostwald점도계를 증류수 및 IPA를 이용하여 세척한 후 건조기에서 건조한다.\n\n(6) 일정량의 고분자용액을 피펫으로 점도계의 filling tube에 채운다.\n\n(7) 피펫을 이용하여 점도계의 모세관 상단의 표시선 위까지 고분자용액 액면이 올라오도록 한다.\n\n(8) 피펫을 제거하고 고분자용액의 두 표시선 사이를 통과하는 시간을 측정한다.\n\n(9) 실험을 3회 반복하여 평균값을 취해준다.\n\n(10) 분자량이 더 높은 PVA(M.W 31000~50000) 고분자 용액에 대해서도 같은 과정의 실험을 반복 수행하여준다.</string>
 </resources>
